--- a/Source/Assets/HNMonthItem.xib
+++ b/Source/Assets/HNMonthItem.xib
@@ -9,12 +9,12 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="280" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="280" height="37"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RJh-VK-6Md">
-                    <rect key="frame" x="119" y="16" width="43" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Month" id="QNZ-Wt-Pxx">
+                    <rect key="frame" x="8" y="10" width="264" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Month" id="QNZ-Wt-Pxx">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -22,12 +22,16 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="RJh-VK-6Md" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="fKd-2V-W8g"/>
-                <constraint firstItem="RJh-VK-6Md" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="vVb-BY-AEZ"/>
+                <constraint firstItem="RJh-VK-6Md" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="10" id="20w-kZ-JY4"/>
+                <constraint firstItem="RJh-VK-6Md" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="10" id="Zun-02-A9j"/>
+                <constraint firstAttribute="trailing" secondItem="RJh-VK-6Md" secondAttribute="trailing" constant="10" id="bgr-3W-TiG"/>
+                <constraint firstAttribute="bottom" secondItem="RJh-VK-6Md" secondAttribute="bottom" constant="10" id="iMT-DX-Px2"/>
             </constraints>
+            <point key="canvasLocation" x="131" y="164.5"/>
         </customView>
         <customObject id="pve-4L-dZe" customClass="HNMonthItem" customModule="samplecocoapod" customModuleProvider="target">
             <connections>
+                <outlet property="monthField" destination="RJh-VK-6Md" id="ZiP-5a-dWM"/>
                 <outlet property="view" destination="c22-O7-iKe" id="kDe-Xb-bAq"/>
             </connections>
         </customObject>
