--- a/Source/Assets/HNWeekItem.xib
+++ b/Source/Assets/HNWeekItem.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner"/>
@@ -13,34 +12,24 @@
             <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XUA-UT-Rlb">
-                    <rect key="frame" x="5" y="6" width="30" height="17"/>
-                    <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Uy5-gm-ssj">
-                            <rect key="frame" x="-2" y="0.0" width="34" height="17"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="WED" id="kfn-J6-FyL">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                    </subviews>
-                    <visibilityPriorities>
-                        <integer value="1000"/>
-                    </visibilityPriorities>
-                    <customSpacing>
-                        <real value="3.4028234663852886e+38"/>
-                    </customSpacing>
-                </stackView>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Uy5-gm-ssj">
+                    <rect key="frame" x="3" y="7" width="34" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="WED" id="kfn-J6-FyL">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="XUA-UT-Rlb" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="lgv-0K-Ufe"/>
-                <constraint firstItem="XUA-UT-Rlb" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="yCG-MN-u7p"/>
+                <constraint firstItem="Uy5-gm-ssj" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="Lam-eF-ynt"/>
+                <constraint firstItem="Uy5-gm-ssj" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="Z8M-YB-KRB"/>
             </constraints>
         </customView>
         <customObject id="Ylm-Sn-Y0T" customClass="HNWeekItem" customModule="samplecocoapod" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="c22-O7-iKe" id="NNh-aV-Was"/>
+                <outlet property="weekField" destination="Uy5-gm-ssj" id="j6i-1V-54m"/>
             </connections>
         </customObject>
     </objects>
