--- a/Source/Assets/HNDateItem.xib
+++ b/Source/Assets/HNDateItem.xib
@@ -29,6 +29,7 @@
         <customObject id="ex8-EC-ZNs" customClass="HNDateItem" customModule="samplecocoapod" customModuleProvider="target">
             <connections>
                 <outlet property="dateField" destination="aTi-fj-LRu" id="S0e-dQ-ZFj"/>
+                <outlet property="itemView" destination="c22-O7-iKe" id="6EL-LC-rqz"/>
                 <outlet property="view" destination="c22-O7-iKe" id="xWx-f6-iY5"/>
             </connections>
         </customObject>
